# token-optimizer

./: .gitignore  README.md  pyproject.toml  requirements.txt
tests/: test_budget.py  test_cache.py  test_compressor.py  test_counter.py
token_optimizer/: __init__.py  budget.py  cache.py  compressor.py  counter.py  wrapper.py
token_optimizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
